# synthshop

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
scripts/: seed_categories.py
src/synthshop/: __init__.py
src/synthshop/cli/: main.py  prompts.py
src/synthshop/cli/commands/: identify.py  list.py  publish.py  unpublish.py
src/synthshop/core/: config.py  models.py  product_store.py
src/synthshop/integrations/: claude_vision.py  modulargrid.py  reverb.py
tests/: test_claude_vision.py  test_cli.py  test_config.py  test_custom_panel.py  test_identify_modulargrid.py  test_models.py  test_modulargrid.py  test_product_store.py  test_reverb.py
