[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthshop"
version = "0.1.0"
description = "CLI tool and shop for listing synths on Reverb and direct via Stripe"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "boto3>=1.34",
    "stripe>=8.0",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn>=0.30",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "moto[s3]>=5.0",
    "ruff>=0.6",
]

[project.scripts]
synthshop = "synthshop.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/synthshop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
